@@ -65,6 +65,7 @@ import games.stendhal.server.entity.mapstuff.area.WalkBlockerFactory;
 import games.stendhal.server.entity.mapstuff.portal.OneWayPortalDestination;
 import games.stendhal.server.entity.mapstuff.portal.Portal;
 import games.stendhal.server.entity.mapstuff.spawner.CreatureRespawnPoint;
+import games.stendhal.server.entity.mapstuff.spawner.DynamicCreatureSpawner;
 import games.stendhal.server.entity.mapstuff.spawner.PassiveEntityRespawnPoint;
 import games.stendhal.server.entity.mapstuff.spawner.PassiveEntityRespawnPointFactory;
 import games.stendhal.server.entity.mapstuff.spawner.SheepFood;
@@ -114,7 +115,11 @@ public class StendhalRPZone extends MarauroaRPZone {
 	 */
 	private final List<SheepFood> sheepFoods;
 
+	/** Statically spawned creatures. */
 	private final List<CreatureRespawnPoint> respawnPoints;
+
+	/** Dynamically spawned creatures. */
+	private DynamicCreatureSpawner dynamicSpawner;
 
 	private final List<PassiveEntityRespawnPoint> plantGrowers;
 
@@ -310,6 +315,30 @@ public class StendhalRPZone extends MarauroaRPZone {
 	 */
 	public void remove(final CreatureRespawnPoint point) {
 		respawnPoints.remove(point);
+	}
+
+	/**
+	 * Retrieves the dynamic creature spawner associated with this zone.
+	 *
+	 * @return
+	 *   Creature spawner instance.
+	 */
+	public DynamicCreatureSpawner getDynamicSpawner() {
+		return dynamicSpawner;
+	}
+
+	/**
+	 * Sets the dynamic creature spawner associated with this zone.
+	 *
+	 * @param spawner
+	 *   Creature spawner instance.
+	 */
+	public void setDynamicSpawner(final DynamicCreatureSpawner spawner) {
+		if (dynamicSpawner != null) {
+			dynamicSpawner.remove();
+		}
+		dynamicSpawner = spawner;
+		dynamicSpawner.init();
 	}
 
 	/**
@@ -1534,6 +1563,7 @@ public class StendhalRPZone extends MarauroaRPZone {
 			os.append("playersAndFriends: " + playersAndFriends.size() + "\n");
 			os.append("portals: " + portals.size() + "\n");
 			os.append("respawnPoints: " + respawnPoints.size() + "\n");
+			os.append("dynamicRespawns: " + dynamicSpawner.maxTotal() + "\n");
 			os.append("sheepFoods: " + sheepFoods.size() + "\n");
 			os.append("objects: " + objects.size() + "\n");
 			logger.info(os);
